# nuke

./: .audit-config.example.json  .babelrc  .circuit_breaker_state  .claude_session_id  .dockerignore  .env  .env.development.example  .env.example  .env.keys  .env.production  .env.production.example  .env.supabase.example  .env.test.example  .env.test.template  .env.vercel  .env.x  .eslintignore  .eslintrc.cjs  .exit_signals  .gitignore  .gitleaks.toml  .last_reset  .lovablerc.json  .mcp.json  .npmrc  .ralph_session  .ralph_session_history  .response_analysis  .tmux-nuke.conf  .vercel-redeploy  .vercelignore  25.5%.  @AGENT.md  @fix_plan.md  ACCESS_ADMIN_DASHBOARD.md  ACCESS_DASHBOARD.md  ACTION_PLAN_FIX_GAPS.md  ACTUAL_FIX.md  ADD_CLAUDE_KEY_HERE.txt  ADMIN_ACCESS_BATCH_ANALYSIS.md  (+659 more)
.claude/: ACTIVE_AGENTS.md  AGENT_PRODUCTIVITY_LOG.md  API_V1_DEPLOYMENT_STATUS.md  AUTONOMOUS_VEHICLE_VISION.md  BARRETT_JACKSON_CRAWLER_RESEARCH.md  BAT_EXTRACTOR_AUDIT.md  BAT_PRICE_BUG_FIX.md  CFO_IMAGE_PIPELINE_COST_MODEL.md  COLLECTING_CARS_CRAWLER_RESEARCH.md  COLLECTING_CARS_PROCESSING_LOG.txt  COLLECTING_CARS_REVIVAL_STATUS.md  COLLECTING_CARS_TYPESENSE_DISCOVERY.md  DATA_INCONSISTENCY_FIX_PLAN.md  EXTRACTION_SOURCES_INVENTORY.md  EXTRACTION_TO_VP_INTEL_BRIEF.md  HANDOFF.md  HEMMINGS_CRAWLER_RESEARCH.md  LIVE_AUCTIONS_STABILITY.md  MECUM_CRAWLER_RESEARCH.md  TELEGRAM.md  (+27 more)
.claude-plugin/: plugin.json
nuke-local/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
nuke-local/desktop-app/src-tauri/src/: main.rs
tools/nuke-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tools/nuke-desktop/src-tauri/icons/: icon.icns
tools/nuke-desktop/src-tauri/src/: main.rs
(+13734 files in other folders)
